--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ela Coda</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 <header>
@@ -38,8 +38,8 @@
     nulla diam efficitur arcu, vel rutrum lorem enim in orci.
   </p>
   <div class="mulheres-imagens">
-    <a href="ada.html"><img src="ada-lovelace.png" alt="Ada Lovelace" width="142" height="142" class="mulheres-circulo"></a>
-    <a href="grace.html"><img src="grace-hopper.png" alt="Grace Hopper" width="142" height="142" class="mulheres-circulo"></a>
+    <a href="ada.html"><img src="ada.png" alt="Ada Lovelace" width="142" height="142" class="mulheres-circulo"></a>
+    <a href="grace.html"><img src="grace.png" alt="Grace Hopper" width="142" height="142" class="mulheres-circulo"></a>
     <img src="fulana.png" alt="Fulana" width="142" height="142" class="mulheres-circulo">
     <img src="fulana2.png" alt="Fulana 2" width="142" height="142" class="mulheres-circulo">
   </div>
