--- a/ada.html
+++ b/ada.html
@@ -44,7 +44,9 @@
         nulla diam efficitur arcu, vel rutrum lorem enim in orci.
       </p>
     </div>
-  </section>
+  <img src="grace.png" width="312" height="317" id="grace"/></section>
+  <section id="icones2"><img src="hedy.png" width="172" height="172" id="fulana"/> <img src="fulana2.png" width="172" height="172" id="fulana2"/></section>
+  <img src="ada.png" width="300" height="301"id="ada"/>
   <div id="jogo">
     <h3>Jogo: Nome do Jogo</h3>
 	  <iframe src="https://carlabruschi.github.io/jogo/" width="800" height="600" style="border:none;"></iframe>
@@ -53,7 +55,8 @@
   <!-- Seção: Créditos -->
   <section id="creditos2" class="creditos2">
     <div id="texto">
-      <h1>Créditos</h1>
+      <h1>
+      Créditos</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget enim ut felis 
         consequat rhoncus. Vivamus ac sapien fermentum, iaculis massa vel, scelerisque sapien. 
@@ -65,16 +68,12 @@
       </p>
     </div>
     
-    <div id="fotos">
-      <img src="Group 3.png" alt="Créditos" width="400" height="400"/>
+    <div id="fotos"><img src="Group 3.png" alt="Créditos" width="400" height="400"/>
     </div>
   </section>
 
-<section id="icones">
-	<img src="grace.png" width="312" height="317" id="grace"/>
-	<img src="fulana2.png" width="172" height="172" id="fulana"/>
-	<img src="fulana2.png" width="172" height="172" id="fulana2"/></section>
-<img src="ada.png" width="300" height="301"id="ada"/></main>
+<section id="icones"></section>
+</main>
 
 
 </body>
