--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="mulheres-imagens">
     <a href="ada.html"><img src="ada.png" alt="Ada Lovelace" title= "Ada Lovelace" width="142" height="142" class="mulheres-circulo"></a>
     <a href="grace.html"><img src="grace.png" alt="Grace Hopper" title="Grace Hopper" width="142" height="142" class="mulheres-circulo"></a>
-    <img src="fulana.png" alt="Fulana" width="142" height="142" class="mulheres-circulo">
+    <img src="hedy.png" alt="Fulana" width="142" height="142" class="mulheres-circulo">
     <img src="fulana2.png" alt="Fulana 2" width="142" height="142" class="mulheres-circulo">
   </div>
 </section>
