--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="mulheres-imagens">
     <a href="ada.html"><img src="ada.png" alt="Ada Lovelace" title= "Ada Lovelace" width="142" height="142" class="mulheres-circulo"></a>
     <a href="grace.html"><img src="grace.png" alt="Grace Hopper" title="Grace Hopper" width="142" height="142" class="mulheres-circulo"></a>
-    <img src="hedy.png" alt="Fulana" width="142" height="142" class="mulheres-circulo">
+    <a href="hedy.html"><img src="hedy.png" alt="Fulana" width="142" height="142" class="mulheres-circulo"></a>
     <img src="fulana2.png" alt="Fulana 2" width="142" height="142" class="mulheres-circulo">
   </div>
 </section>
@@ -57,11 +57,12 @@
         justo.      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget enim ut felis 
         consequat rhoncus. Vivamus ac sapien fermentum, iaculis massa vel, scelerisque sapien. 
         Suspendisse potenti. Fusce pellentesque ligula eget dolor imperdiet, quis consequat 
-      justo.</p></div><div id="fotos"><img src="Group 3.png" alt="" width="400" height="400"/></div>
+      justo.</p>
+      </div><div id="fotos"><img src="carla.png" alt="" width="150" height="150"/><img src="ami.png" alt="" width="150" height="150"/><img src="valguima.png" alt="" wwidth="150" height="150"/></div>
 	</section>
 </main>
 	<footer class="rodape">
-  <p>&copy; 2025 Ela Coda. Todos os direitos reservados.</p>
+  <p> 2025 Ela Coda. Universidade Federal da Grande Dourados.</p>
 </footer>
 
 </body>
